added ollama support

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,12 @@ INTERNAL_GATEWAY_HOST=127.0.0.1
 # Leave empty to use the default
 OPENCLAW_CONFIG_PATH=
 
+# Base URL of the Ollama instance (for self-hosted model integration)
+# If deploying Ollama as a separate Railway service, use the internal URL:
+# e.g. http://ollama.railway.internal:11434
+# Leave empty if not using Ollama
+OLLAMA_BASE_URL=
+
 # Path to the openclaw CLI entry point
 # Default: /usr/local/lib/node_modules/openclaw/dist/entry.js
 # Leave empty unless using a custom build
